add batchWrite permission

--- a/serverless.yml
+++ b/serverless.yml
@@ -39,8 +39,18 @@ provider:
           - - "arn:aws:s3:::"
             - "Ref" : "ServerlessDeploymentBucket"
             - "/*"
+    - Effect: "Allow"
+      Action:
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+        - dynamodb:BatchWriteItem
+      Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.TableName}"
 
-# you can define service wide environment variables here
+  # you can define service wide environment variables here
   environment:
     TableName: 'gps_coords'
 
