--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
   "devDependencies": {
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.2.0",
-    "@babel/plugin- proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-typescript": "^7.3.3",
+    "express": "^4.16.4",
     "gpx-parse": "^0.10.4",
     "promise": "^8.0.2",
     "serverless": "^1.38.0",
     "typescript": "^3.2.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "socket.io": "^2.2.0"
+  }
 }
