--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "sls create --template aws-nodejs --path aws-nodejs-sls",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "prod": "node index.js",
+    "test": "node index.js --test",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "build": "npm run build:types && npm run build:js",
